deploy/k8s/env-configMap.yml
apiVersion: v1
kind: Namespace 
metadata:
  name: echoapp
