deploy/k8s/etcd-svr.yaml
apiVersion: v1
kind: Service
metadata:
  name: trace
  namespace:  echoapp
spec:
  selector:
    app: jaegertracing
  type: "NodePort"
  ports:
  - name: "trace-16686"
    port: 16686
    protocol: "TCP"
    targetPort: 16686
  - name: "trace-6831"
    port: 6831
    protocol: "UDP"
    targetPort: 6831
  - name: "trace-6832"
    port: 6832
    protocol: "UDP"
    targetPort: 6832
  - name: "trace-5775"
    port: 5775
    protocol: "UDP"
    targetPort: 5775

---

apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "trace-deploy"
  namespace: "echoapp"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "jaegertracing"
  strategy:
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "jaegertracing"
    spec:
      containers:
      - name: "trace-service"
        image: jaegertracing/all-in-one:latest
        imagePullPolicy: "Always"
        resources: {}
      hostAliases:
      - hostnames:
        - "sh2"
        ip: "124.70.157.82"
#      affinity:
#         nodeAffinity:
#                 preferredDuringSchedulingIgnoredDuringExecution:
#                 - weight: 90
#                   preference: {}
#                 requiredDuringSchedulingIgnoredDuringExecution:
#                   nodeSelectorTerms:
#                   - matchExpressions:
#                     - key: "kubernetes.io/hostname"
#                       operator: "In"
#                       values:
#                        - "k8s-node1"
#                        - "k8s-node02"
