deploy/k8s/user-svr.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: echoapp
spec:
  selector:
    app: user
  ports:
  - name: "tcp-80-8882"
    #nodePort: 32209
    port: 80
    protocol: "TCP"
    targetPort: 8881
  type: "NodePort"
---

apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "user-deploy"
  namespace: "echoapp"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "user"
  strategy:
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "user"
    spec:
      imagePullSecrets:
      - name: gdocker
      containers:
      - name: "user-service"
        image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:latest
        args:
        - "user"
        - "--config-type=apollo"
        command:
        - "echoapp"
        imagePullPolicy: "Always"
        resources: {}
        workingDir: "/usr/local/var/echoapp"
      hostAliases:
      - hostnames:
        - "sh2"
        ip: "124.70.157.82"
    
      affinity:
         nodeAffinity:
                 preferredDuringSchedulingIgnoredDuringExecution:
                 - weight: 90
                   preference: {}
                 requiredDuringSchedulingIgnoredDuringExecution:
                   nodeSelectorTerms:
                   - matchExpressions:       
                     - key: "kubernetes.io/hostname"
                       operator: "In"
                       values:
                        - "k8s-node1"
