deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoapp-ingress
  namespace: echoapp
spec:
  ingressClassName: nginx      
  rules:
  - host: m.dev.xytschool.com
    http:
      paths:
      - path: /dev/user
        pathType: Prefix
        backend:
          service: 
            name: user
            port: 
              number: 80

      - path: /dev/goods
        pathType: Prefix
        backend:
          service:
           name: goods
           port: 
             number: 80

      - path: /dev/site
        pathType: Prefix
        backend:
           service: 
             name: site
             port: 
              number: 80 
      
      - path: /dev/comment
        pathType: Prefix
        backend:
           service:
               name: comment
               port: 
                 number:
                         80
      - path: /dev/order
        pathType: Prefix
        backend:
           service:
             name: order
             port: 
               number: 80
         
      - path: /dev/public
        pathType: Prefix
        backend:
           service:
             name: site
             port: 
               number: 80
 
      - path: /index
        pathType: Prefix
        backend:
           service: 
             name: site
             port: 
              number: 80 

      - path: /
        pathType: Prefix
        backend:
           service:
             name: site
             port: 
               number: 80
 
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
        name: nginx
spec: 
        controller: k8s.io/ingress-nginx
